# Haskell-Template

./: Haskell-Template.cabal  README.md
.devcontainer/: devcontainer.json
.github/classroom/: autograding.json
Exemplos/: Exemplo1.hs
Exercicio-01/: Exercicio01.hs  TestExercicio01.hs
Exercicio-02/: Exercicio02.hs  TestExercicio02.hs
Exercicio-03/: Exercicio03.hs  TestExercicio03.hs
Exercicio-04/: Exercicio04.hs  TestExercicio04.hs
Exercicio-05/: Exercicio05.hs  TestExercicio05.hs
Exercicio-06/: Exercicio06.hs  TestExercicio06.hs
Exercicio-07/: Exercicio07.hs  TestExercicio07.hs
Exercicio-08/: Exercicio08.hs  TestExercicio08.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
